# send-email-python

./: README.md  email_template.html  main.py  pyproject.toml
attachments/: some_text.txt
